# pdf2ppt

./: CLAUDE.md  LICENSE  README.md  download_libs.bat  index.html  pdf2ppt.bat  pdf2ppt.html  pdf2ppt.py  pyproject.toml  run.bat  server.py  setup_py.bat  start.bat  start.sh  sw.js
src/: pdf2ppt.bat  pdf2ppt.py  setup_py.bat
src/pdf2ppt/: converter.py  server.py
