[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2ppt"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "pillow",
    "pymupdf",
    "python-pptx",
    "surya-ocr",
    "numpy",
    "scipy",
    "janome",
    "svglib",
    "transformers==4.57.3",
]

[project.scripts]
pdf2ppt    = "pdf2ppt.converter:main"
webpdf2ppt = "pdf2ppt.server:main"

[tool.setuptools.packages.find]
where = ["src"]
